<resources>
    <string name="app_name">Barber UPC</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="log_in_button_title">Log In</string>

    <string name="generic_error_http_request">We couldn\'t load your request, please try again...</string>
    <string name="wrong_credentials">Wrong credentials, please try again</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_reservation">Reservation</string>
    <string name="title_hair_cuts">Hair Cut</string>
    <string name="title_profile">Profile</string>
    <string name="barber_title">Barber Shop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data_found">No data found</string>
    <string name="history_title">History</string>
    <string name="loading_text">Loading...</string>
    <string name="default_user_name">USER NAME</string>
    <string name="default_email_text">user@user.com</string>
    <string name="phone_number_hint">Add your phone number</string>
    <string name="log_off">Log off</string>
    <string name="save_button">Save</string>
    <string name="credit_card_name">VISA / *********54</string>
    <string name="credit_card_list">Credit Card List</string>
    <string name="add_credit_card_button">Add Credit Card</string>
    <string name="credit_card_empty">NO CREDIT CARD FOUND</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="exp_date">0101</string>
    <string name="ccv">CCV</string>
    <string name="credit_card_name_edit_text">Credit card Name</string>
    <string name="barber_name_default">Barber Name</string>
    <string name="hair_cut_name_default">Hair Cut Name</string>
    <string name="barber_description_info">BARBER description info</string>
    <string name="book_an_appointment_button">Book an Appointment</string>
</resources>
