<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/credit_card_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18dp"
        android:text="@string/credit_card_list"
        app:layout_constraintBottom_toTopOf="@id/loading_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_credit_card_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_credit_card_button" />

    <LinearLayout
        android:id="@+id/loading_layout"
        app:layout_constraintTop_toBottomOf="@id/add_credit_card_button"
        android:layout_width="match_parent"
        android:paddingTop="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/loading_indicator"
            android:text="@string/loading_text"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>