<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.barberia.upc.fragments.ProfileFragment">

    <TextView
        android:id="@+id/profile_loading"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/loading_text"
        android:layout_height="match_parent" />


    <LinearLayout
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:text="@string/default_user_name"
                    android:textStyle="bold"
                    android:textSize="36dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:text="@string/default_email_text"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <ImageView
                android:id="@+id/user_picture"
                android:src="@drawable/ic_person_black_24dp"
                android:layout_width="100dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_height="100dp" />


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_phoneNumber"
                android:hint="@string/phone_number_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_address"
                android:hint="Add your address" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginBottom="20dp"
            android:text="@string/save_button" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/credit_card_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</LinearLayout>